# src/routes/index.ts
@@ -4,6 +4,7 @@ import * as jwtConfig from '../config/middleware/jwtAuth';
 import * as swaggerUi from 'swagger-ui-express';
 import AuthRouter from './AuthRouter';
 import UserRouter from './UserRouter';
+import StackRouter from './StackRouter';
 let swaggerDoc: Object;
 
 try {
@@ -30,6 +31,15 @@ export function init(app: express.Application): void {
      * @constructs
      */
     app.use('/v1/users', jwtConfig.isAuthenticated, UserRouter);
+
+      /**
+     * @description
+     *  Forwards any requests to the /v1/stacks URI to our StackRouter
+     *  Also, check if user authenticated
+     * @constructs
+     */
+    app.use('/v1/stacks', jwtConfig.isAuthenticated, StackRouter);
+
 
     /**
      * @description Forwards any requests to the /auth URI to our AuthRouter
