# swagger.json
@@ -85,7 +85,7 @@
           "200": {
             "description": "user successfuly logged",
             "content": {
-              "appication/json": {
+              "application/json": {
                 "example": {
                   "status": 200,
                   "logged": true,
@@ -277,6 +277,175 @@
           }
         }
       }
+    },
+    "/v1/stacks/": {
+      "get": {
+        "description": "Get all stored stacks in Database",
+        "tags": [
+          "stacks"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "An array of stacks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Stacks"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "description": "Create new Stack",
+        "tags": [
+          "stacks"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "user creation request body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/StackSchema"
+              },
+              "example": {
+                "name": "stackName",
+                "wikipediaLink": "stackLink"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "return created stack",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/StackSchema"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/stacks/{id}": {
+      "get": {
+        "description": "Get stack by stackId",
+        "tags": [
+          "stacks"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "the unique stackId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return stack by id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/StackSchema"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "description": "Delete stack by stackId",
+        "tags": [
+          "stacks"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "the unique stackId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return deleted stack",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/StackSchema"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -315,6 +484,29 @@
         "type": "array",
         "items": {
           "$ref": "#/components/schemas/UserSchema"
+        }
+      },
+      "Stacks": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/StackSchema"
+        }
+      },
+      "StackSchema": {
+        "required": [
+          "name",
+          "wikipediaLink"
+        ],
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "wikipediaLink": {
+            "type": "string"
+          }
         }
       },
       "Error": {
